--- a/css/styles.css
+++ b/css/styles.css
@@ -41,13 +41,12 @@ div {
 
 .right-cloud {
   position: absolute;
-  right: 28%;
+  right: 550px;
   top: 50px;
 }
 
 .left-cloud {
   position: absolute;
-  left: 28%;
-  bottom: 300px;
-  top: 175px;
+  left: 550px;
+  bottom: 175px;
 }
